[package]
name = "toy-ipfs-bitswap"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build = { default-features = false, version = "0.8" }

[dependencies]
cid = { version = "0.8", features = ["alloc"] }
fnv = { default-features = false, version = "1.0" }
futures = { default-features = false, version = "0.3" }
hash_hasher = "2.0.3"
libp2p-core = { default-features = false, version = "0.32" }
libp2p-swarm = { default-features = false, version = "0.34" }
multihash = { default-features = false, version = "0.16" }
prost = { default-features = false, version = "0.9" }
thiserror = { default-features = false, version = "1.0" }
tokio = { default-features = false, version = "1", features = ["rt"] }
tracing = { default-features = false, version = "0.1" }
unsigned-varint = { default-features = false, version = "0.3" }
